reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__scheduler.rs_line_1365_col_9.log

*** crates/tracewake-core/src/scheduler.rs:1365:9: replace no_human::build_decision_trace_event -> EventEnvelope with Default::default()

*** mutation diff:
--- crates/tracewake-core/src/scheduler.rs
+++ replace no_human::build_decision_trace_event -> EventEnvelope with Default::default()
@@ -1357,110 +1357,17 @@
         process_id: &ProcessId,
         actor_id: &ActorId,
         window: &DayWindow,
         proposal: &Proposal,
         decision_trace_record: &DecisionTraceRecord,
         content_manifest_id: &ContentManifestId,
         ordinary_event: &EventEnvelope,
     ) -> EventEnvelope {
-        let trace_id = decision_trace_record.trace_id.clone();
-        let trace_canonical = decision_trace_record.serialize_canonical();
-        let mut event = EventEnvelope::new_caused_v1(
-            EventId::new(format!(
-                "event.decision_trace.{}.{}",
-                actor_id.as_str(),
-                window.window_id
-            ))
-            .unwrap(),
-            EventKind::DecisionTraceRecorded,
-            0,
-            0,
-            window.start_tick,
-            OrderingKey::new(
-                window.start_tick,
-                SchedulePhase::NoHumanProcess,
-                SchedulerSourceId::Process(process_id.clone()),
-                ProposalSequence::new(0),
-                ActionId::new("decision_trace_recorded").unwrap(),
-                vec![actor_id.as_str().to_string(), trace_id.as_str().to_string()],
-                format!("decision_trace:{}:{}", actor_id.as_str(), window.window_id),
-            ),
-            content_manifest_id.clone(),
-            vec![EventCause::Event(ordinary_event.event_id.clone())],
-        )
-        .unwrap();
-        event.actor_id = Some(actor_id.clone());
-        event.process_id = Some(process_id.clone());
-        event.proposal_id = Some(proposal.proposal_id.clone());
-        event.participants = vec![actor_id.to_string(), trace_id.to_string()];
-        event.payload = vec![
-            PayloadField::new("trace_schema_version", "1"),
-            PayloadField::new("trace_id", trace_id.as_str()),
-            PayloadField::new("trace_canonical", trace_canonical),
-            PayloadField::new("actor_id", actor_id.as_str()),
-            PayloadField::new("window_id", window.window_id.as_str()),
-            PayloadField::new("window_start_tick", window.start_tick.value().to_string()),
-            PayloadField::new("window_end_tick", window.end_tick.value().to_string()),
-            PayloadField::new("action_id", proposal.action_id.as_str()),
-            PayloadField::new("ordinary_event_id", ordinary_event.event_id.as_str()),
-            PayloadField::new(
-                "hidden_truth_audit_actor_known_only",
-                decision_trace_record
-                    .hidden_truth_audit_result
-                    .actor_known_only
-                    .to_string(),
-            ),
-            PayloadField::new(
-                "hidden_truth_audit_notes",
-                decision_trace_record
-                    .hidden_truth_audit_result
-                    .notes
-                    .clone(),
-            ),
-            PayloadField::new(
-                "responsible_layer",
-                decision_trace_record
-                    .typed_diagnostic
-                    .responsible_layer
-                    .stable_id(),
-            ),
-            PayloadField::new(
-                "blocker_code",
-                decision_trace_record
-                    .typed_diagnostic
-                    .blocker_code
-                    .stable_id(),
-            ),
-            PayloadField::new(
-                "input_source",
-                decision_trace_record.typed_diagnostic.input_source.clone(),
-            ),
-            PayloadField::new(
-                "actual_source",
-                decision_trace_record.typed_diagnostic.actual_source.clone(),
-            ),
-            PayloadField::new(
-                "hidden_truth_referenced",
-                decision_trace_record
-                    .typed_diagnostic
-                    .hidden_truth_referenced
-                    .to_string(),
-            ),
-            PayloadField::new(
-                "remediation_hint",
-                decision_trace_record
-                    .typed_diagnostic
-                    .remediation_hint
-                    .clone(),
-            ),
-        ];
-        event.effects_summary =
-            "no-human decision trace recorded from autonomous proposal".to_string();
-        event
+        Default::default() /* ~ changed by cargo-mutants ~ */
     }
 
     struct PassiveNeedDecisionContext<'a> {
         process_id: &'a ProcessId,
         actor_id: &'a ActorId,
         window: &'a DayWindow,
         content_manifest_id: &'a ContentManifestId,
     }


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/scheduler.rs` has changed (1781905297.575924990s, 4s after last build at 1781905293.399925024s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0277]: the trait bound `EventEnvelope: Default` is not satisfied
    --> crates/tracewake-core/src/scheduler.rs:1365:9
     |
1365 |         Default::default() /* ~ changed by cargo-mutants ~ */
     |         ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |
help: the trait `Default` is not implemented for `EventEnvelope`
    --> crates/tracewake-core/src/events/envelope.rs:717:1
     |
 717 | pub struct EventEnvelope {
     | ^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `envelope::EventEnvelope: Default` is not satisfied
    --> crates/tracewake-core/src/scheduler.rs:1365:9
     |
1365 |         Default::default() /* ~ changed by cargo-mutants ~ */
     |         ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |
help: the trait `Default` is not implemented for `envelope::EventEnvelope`
    --> crates/tracewake-core/src/events/envelope.rs:717:1
     |
 717 | pub struct EventEnvelope {
     | ^^^^^^^^^^^^^^^^^^^^^^^^

error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
